@@ -266,6 +266,8 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
      - Canon inkjet printers:
 
        Canon PIXMA iP3500 (EXPERIMENTAL)
+       Canon PIXMA iP3300 (EXPERIMENTAL)
+       Canon PIXMA MP190  (EXPERIMENTAL)
 
      - Epson inkjet printers:
 
